--- a/fengshangshengdian/package.json
+++ b/fengshangshengdian/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^6.3.7",
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.13.0",
     "eslint": "^3.1.1",
