--- a/beidayangqi/package.json
+++ b/beidayangqi/package.json
@@ -1,7 +1,5 @@
 {
   "devDependencies": {
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "browser-sync": "^2.17.5",
     "cssgrace": "^3.0.0",
@@ -11,6 +9,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.13",
     "gulp-imagemin": "^3.1.0",
     "gulp-plumber": "^1.1.0",
@@ -18,8 +17,10 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-util": "^3.0.7",
-    "webpack": "^1.13.3",
-    "webpack-stream": "^3.2.0"
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.18.0"
   }
 }
