--- a/m_huanqiu/package.json
+++ b/m_huanqiu/package.json
@@ -8,6 +8,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "browser-sync": "^2.17.5",
     "cssgrace": "^3.0.0",
+    "eruda": "^1.1.3",
     "eslint": "^3.9.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.1",
