--- a/m_huanqiu/package.json
+++ b/m_huanqiu/package.json
@@ -27,5 +27,8 @@
     "gulp-util": "^3.0.7",
     "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "smoothscroll-polyfill": "^0.3.4"
   }
 }
